...
    <string name="web_dav_set_import_old">WebDav settings/Import legacy data</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backup_permission">Backup needs storage permission</string>
    <string name="restore_permission">Restore needs storage permission</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="backup_confirmation">Backup confirmation</string>
    <string name="backup_message">The new backup files will replace the original.\n Backup folder: YueDu</string>
    <string name="restore_confirmation">Restore confirmation</string>
    <string name="restore_message">Restoring the bookshelf data will overwrite the current Bookshelf.</string>
    <string name="backup_success">Backup succeed</string>
    <string name="backup_fail">Backup failed\n%s</string>
...
    <string name="rule_summary">Rules description</string>
    <string name="share">Share</string>
    <string name="share_app">Share to</string>
    <string name="flow_sys">Follow system</string>
    <string name="add">Add</string>
    <string name="import_book_source">Import book sources</string>
    <string name="import_local">Import local</string>
    <string name="import_on_line">Import online</string>
    <string name="replace_rule_title">Replacement</string>
    <string name="manual_replace_rule">Select replacements</string>
    <string name="replace_rule_edit">Edit replacement rule</string>
    <string name="replace_rule">Pattern</string>
    <string name="replace_to">Replacement</string>
    <string name="img_cover">Cover</string>
...
    <string name="net_error_10002">Network connection timeout</string>
    <string name="net_error_10003">Data parsing failed</string>
    <!--error string end-->

    <string name="source_http_header">HTTP Header</string>
    <string name="debug_source">Debug source</string>
    <string name="import_by_qr_code">Import from QR code</string>
    <string name="share_selected_source">Share selected sources</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="click_on_selected_show_menu">Tap to display Menu when selected </string>
    <string name="theme">Theme</string>
    <string name="theme_mode">Theme mode</string>
    <string name="theme_mode_desc">Select a theme you want</string>
    <string name="join_qq_group">Join QQ group</string>
...
    <string name="add_replace_rule">New replacement</string>
    <string name="group">Group</string>
    <string name="group_s">Group: %s</string>
    <string name="toc_s">Chapters: %s</string>
    <string name="enable_explore">Enable Discovery</string>
    <string name="disable_explore">Disable Discovery</string>
    <string name="enable_selection">Enable selected</string>
    <string name="disable_selection">Disable selected</string>
    <string name="export_selection">Export selected</string>
    <string name="export">Export</string>
    <string name="load_toc">Load chapters</string>
    <string name="load_info">Load book detail</string>
    <string name="tts">TTS</string>
    <string name="web_dav_pw">WebDav password</string>
    <string name="web_dav_pw_s">Input you WebDav authorized password</string>
...
    <string name="main_body">Content</string>
    <string name="footer">Footer</string>
    <string name="select_end">Select end</string>
    <string name="select_start">Select start</string>
    <string name="share_layout">Shared layout</string>
    <string name="browser">Browser</string>
    <string name="import_default_rule">Import default rules</string>
    <string name="name">Name</string>
    <string name="regex">Regex</string>
    <string name="content_search_match_case">Match case</string>
    <string name="content_search_invalid_regex">Invalid regular expression</string>
    <string name="content_edit_position">Text position</string>
    <string name="example">Example</string>
...
